--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="header">
             <div class="h1">
               <div class="c1">
-                <img class="logodiv" src="../aayush-kalia.github.io/img/logo2.webp" alt="logo image">
+                <img class="logodiv" src="../img/logo2.webp" alt="logo image">
               </div>
               <div class="c2">
                 BellyDelights
