--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>
       Belly Delights
     </title>
-    <link rel="stylesheet" href="../css-files/foodapp.css">
+    <link rel="stylesheet" href="css-files/foodapp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -20,13 +20,13 @@
           <div class="header">
             <div class="h1">
               <div class="c1">
-                <img class="logodiv" src="../img/logo2.webp" alt="logo image">
+                <img class="logodiv" src="img/logo2.webp" alt="logo image">
               </div>
               <div class="c2">
                 BellyDelights
               </div>
               <div class="c3">
-                <img class="phonelogo" src="../img/phone logo.png" alt="phone icon">
+                <img class="phonelogo" src="img/phone logo.png" alt="phone icon">
               </div>
               <div class="c4">
                 Express Delivery<br><span style="font-weight: bold;">1800 258 888</span>
@@ -49,7 +49,7 @@
               <div class="b2g1">1+1=3</div>
             </div>
           </div>
-          <div class="imgdiv"><img class="img1" src="../img/food1.png" alt="food img"></div>
+          <div class="imgdiv"><img class="img1" src="img/food1.png" alt="food img"></div>
         </div>
       </div>
       <div class="c5">
@@ -61,7 +61,7 @@
       </div>
       <div class="portion2">
         <div class="order">
-              <img class="foodimg1" src="../img/opic1.png" alt="food image">
+              <img class="foodimg1" src="img/opic1.png" alt="food image">
           <div class="itemname">Lorem ipsum dolor</div>
           <div class="itemdes">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
           <div class="obutton">
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="order" style="margin-left: 120px; margin-right: 120px;">
-            <img class="foodimg1" src="../img/opic1.png" alt="food image">
+            <img class="foodimg1" src="img/opic1.png" alt="food image">
           <div class="itemname">Lorem ipsum dolor</div>
           <div class="itemdes">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
           <div class="obutton">
@@ -77,7 +77,7 @@
           </div>
         </div>    
         <div class="order">
-            <img class="foodimg1" src="../img/opic1.png" alt="food image">
+            <img class="foodimg1" src="img/opic1.png" alt="food image">
           <div class="itemname">Lorem ipsum dolor</div>
           <div class="itemdes">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</div>
           <div class="obutton">
@@ -97,9 +97,9 @@
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla dolore illum voluptatem ipsa odio minima deleniti illo iure, iste earum ut sapiente laudantium ipsum rerum ullam ab, autem harum facere!
         </div>
         <div class="picdiv">
-          <img class="pic1" src="../img/samplepic1.jpg" alt="food img">
-          <img class="pic2" src="../img/samplepic2.jpg" alt="food img">
-          <img class="pic3" src="../img/samplepic3.jpg" alt="food img">
+          <img class="pic1" src="img/samplepic1.jpg" alt="food img">
+          <img class="pic2" src="img/samplepic2.jpg" alt="food img">
+          <img class="pic3" src="img/samplepic3.jpg" alt="food img">
         </div>
       </div>
       <div class="portion4">
