--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
   <head>
     <title>
       Belly Delights
@@ -26,7 +26,7 @@
                 BellyDelights
               </div>
               <div class="c3">
-                <img class="phonelogo" src="img/phone logo.png" alt="phone icon">
+                <img class="phonelogo" src="img/phonelogo.png" alt="phone icon">
               </div>
               <div class="c4">
                 Express Delivery<br><span style="font-weight: bold;">1800 258 888</span>
