added meta tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </title>
     <link rel="stylesheet" href="css-files/foodapp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta charset="UTF-8">
+    <meta name="description" content="BellyDelights is the best food delivery app, serving authentic italian food.
+     Using only fresh and homemade ingredients, we make the most delicious pizza, pasta, lasagna, and salads.">
+     <meta itemprop="name" content="Best food delivery app in ludhiana, best italian food.">
+     <link rel="icon" type="image/png" href="../img/opic1.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
