--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="BellyDelights is the best food delivery app, serving authentic italian food.
      Using only fresh and homemade ingredients, we make the most delicious pizza, pasta, lasagna, and salads.">
      <meta itemprop="name" content="Best food delivery app in ludhiana, best italian food.">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="author" content="John Doe">
      <link rel="icon" type="image/png" href="../img/opic1.png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
