--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      Belly Delights
+      Delicious food at your doorstep! Only on BellyDelights
     </title>
     <link rel="stylesheet" href="css-files/foodapp.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
